# stoat-and-ferret

./: .cla-assistant.json  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .quality_contract.txt  .quality_full_pytest.txt  .quality_golden_scenarios.txt  .quality_mypy.txt  .quality_ruff.txt  .quality_smoke.txt  AGENTS.md  CHANGELOG.md  CLA.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.ci  NOTICE.md  README.md  STATUS.md  UNSAFE_BLOCK_INVENTORY.md  alembic.ini  backlog_verification.py  build_payload.py  call_start_exploration.py  contract_output.txt  contract_tests.txt  docker-compose.yml  fixture_test_output.txt  full_test_output.txt  full_test_output2.txt  golden_scenarios.txt  loadtest_s1_output.txt  loadtest_s2_output.txt  loadtest_s3_output.txt  merge_result.txt  mypy_output.txt  parity_output.txt  pyproject.toml  (+14 more)
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  license-headers.yml
alembic/: env.py
alembic/versions/: 1e895699ad50_add_transitions_and_effects_json_columns.py  39896ab3d0b7_add_clips_table.py  44c6bfb6188e_add_audit_log.py  (+17 more)
benchmarks/: __init__.py  __main__.py  bench_filter_escape.py  bench_ranges.py  bench_timeline.py  bench_validation.py  run_benchmarks.py  timing.py
data/: stoat.db  stoat.db-shm  stoat.db-wal
docs/: ARCHITECTURE.md  CHANGELOG.md  STATUS.md  docker-testing.md
grafana/: dashboard.json
gui/: eslint.config.js  openapi.json  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts  vitest.setup.ts
rust/stoat_ferret_core/: Cargo.toml  build.rs
rust/stoat_ferret_core/benches/: filter_builders.rs
rust/stoat_ferret_core/src/: batch.rs  lib.rs  schema.rs  version.rs
rust/stoat_ferret_core/src/clip/: mod.rs  validation.rs
rust/stoat_ferret_core/src/compose/: graph.rs  mod.rs  overlay.rs  timeline.rs
rust/stoat_ferret_core/src/ffmpeg/: audio.rs  automation.rs  command.rs  drawtext.rs  expression.rs  filter.rs  framerate.rs  freeze.rs  mastering.rs  mod.rs  reverse.rs  spatial.rs  speed.rs  subtitles.rs  transitions.rs  video.rs  voice_repair.rs
rust/stoat_ferret_core/src/layout/: mod.rs  position.rs  preset.rs
rust/stoat_ferret_core/src/preview/: cost.rs  mod.rs  scale.rs  simplify.rs
rust/stoat_ferret_core/src/qc/: mod.rs
rust/stoat_ferret_core/src/render/: command.rs  encoder.rs  mod.rs  plan.rs  progress.rs  translate.rs
rust/stoat_ferret_core/src/sanitize/: mod.rs
rust/stoat_ferret_core/src/shapes/: checkerboard.rs  concentric_rings.rs  generic_procedural.rs  mod.rs  procedural_parser.rs  radial_burst.rs  spiral.rs
rust/stoat_ferret_core/src/timeline/: duration.rs  framerate.rs  mod.rs  position.rs  range.rs
scripts/: add_license_headers.py  check_dependency_licenses.py  check_openapi_freshness.py  check_pyi_append_only.py  deploy_smoke.sh  export_openapi.py  license_grep_allowlist.txt  repair_render_fixture.py  seed_sample_project.py  uat_journey_201.py  uat_journey_202.py  uat_journey_203.py  uat_journey_204.py  uat_journey_205.py  uat_journey_401.py  uat_journey_402.py  uat_journey_403.py  uat_journey_404.py  uat_journey_501.py  uat_journey_502.py  uat_journey_503.py  uat_journey_504.py  uat_journey_604.py  uat_journey_605.py  uat_runner.py  verify_render_output.py  verify_stubs.py
tests/: __init__.py  conftest.py  factories.py  host_allowlist_vectors.py  test_app_lifespan.py  test_asset_service.py  test_async_executor.py  test_async_repository_contract.py  test_audio_builders.py  test_audit_logging.py  test_baseline_hygiene.py  test_batch_repository_contract.py  test_c4_yaml_drift.py  test_chapter_embedding.py  test_clip_model.py  test_clip_repository_contract.py  test_clip_split.py  test_database_startup.py  test_db_fixture_lifecycle.py  test_db_schema.py  test_delivery_profiles.py  test_dependency_licenses.py  test_dump_ws_events.py  test_effects_blur_sharpen.py  test_effects_color_lut.py  test_effects_framerate.py  test_effects_freeze_frame.py  test_effects_keying_blend.py  test_effects_opacity_scale.py  test_effects_optical_distortion.py  test_effects_pan.py  test_effects_procedural_generators.py  test_effects_reverb.py  test_effects_reverse.py  test_effects_variable_speed.py  test_effects_window.py  test_event_loop_responsiveness.py  test_executor.py  test_factories.py  test_ffmpeg_observability.py  (+51 more)
tmp/: v109-analysis-summary.txt  v109-learnings-and-prs-report.json
(+3016 files in other folders)
