[project]
name = "stoat-ferret"
version = "0.1.0"
description = "AI-driven video editor with hybrid Python/Rust architecture"
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Note: maturin build-system will be configured when Rust component is added
# [tool.maturin]
# features = ["pyo3/extension-module"]
# python-source = "src"

[tool.hatch.build.targets.wheel]
packages = ["src/stoat_ferret"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "maturin>=1.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
strict = true
disallow_untyped_defs = true
python_version = "3.10"
mypy_path = "src"
packages = ["stoat_ferret"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]
