[project]
name = "stoat-ferret"
version = "0.1.0"
description = "AI-driven video editor with hybrid Python/Rust architecture"
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "alembic>=1.13",
    "structlog>=24.0",
    "prometheus-client>=0.20",
    "aiosqlite>=0.19",
    "fastapi>=0.109",
    "uvicorn[standard]>=0.27",
    "pydantic-settings>=2.0",
]

# Build system: Use maturin when building with Rust component
# Requires: Visual Studio Build Tools with C++ workload + Windows SDK
# To enable: change build-backend to "maturin" and requires to ["maturin>=1.0,<2.0"]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.maturin]
python-source = "src"
module-name = "stoat_ferret_core._core"
features = ["pyo3/extension-module"]
manifest-path = "rust/stoat_ferret_core/Cargo.toml"

[tool.hatch.build.targets.wheel]
packages = ["src/stoat_ferret", "src/stoat_ferret_core"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.26",
    "ruff>=0.4",
    "mypy>=1.10",
    "maturin>=1.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
strict = true
disallow_untyped_defs = true
python_version = "3.10"
mypy_path = ["src", "stubs"]
packages = ["stoat_ferret"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing"
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "api: API endpoint tests",
    "blackbox: Black box tests exercising complete workflows through the REST API",
    "contract: Contract tests for protocol compliance",
    "requires_ffmpeg: Tests that require FFmpeg to be installed",
]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]
