[package]
name = "stoat_ferret_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "stoat_ferret_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.26", features = ["abi3-py310"] }
pyo3-stub-gen = "0.17"
regex = "1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.0"
pyo3 = { version = "0.26", features = ["auto-initialize"] }

[[bench]]
name = "filter_builders"
harness = false
