[package]
name = "stoat_ferret_core"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

[lib]
name = "stoat_ferret_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.26", features = ["abi3-py310"] }
pyo3-stub-gen = "0.17"
regex = "1"
serde_json = "1"
image = "0.25"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.0"
pyo3 = { version = "0.26", features = ["auto-initialize"] }
sha2 = "0.10"

[[bench]]
name = "filter_builders"
harness = false
